--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Test and Deploy React App
+name: Deploy React App
 
 on:
   push:
@@ -6,20 +6,9 @@ on:
       - main
 
 jobs:
-  test:
+  deploy:
+    name: Build and Deploy
     runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-
-      - name: Install dependencies
-        run: npm install
 
     steps:
       - name: Checkout code
